--- a/index.html
+++ b/index.html
@@ -12,12 +12,52 @@
 
 <body>
   <h2 class="question--title">Q7 サイズ変更</h2>
+  <div class="red_box"></div>
   <h2 class="question--title">Q2 色変更</h2>
+  <div class="box color_box"></div>
   <h2 class="question--title">Q3 margin値の変更</h2>
+  <div class="center_box">
+    <div class="box blue_box"></div>
+    <div class="box green_box"></div>
+  </div>
   <h2 class="question--title">Q4 floatの解除</h2>
+  <div class="clearfix">
+    <div class="center">
+      <div class="box color_red float"></div>
+      <div class="box color_blue float"></div>
+    </div>
+  </div>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+  <div class="flex_box">
+    <div class="box color_red flex_item">
+      <p>A</p>
+    </div>
+    <div class="box color_blue flex_item">
+      <p>B</p>
+    </div>
+    <div class="box color_orange flex_item">
+      <p>C</p>
+    </div>
+  </div>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+  <div class="flex_order">
+    <div class="box color_green item1">
+      <p>A</p>
+    </div>
+    <div class="box color_ligreen item2">
+      <p>B</p>
+    </div>
+    <div class="box color_purple item3">
+      <p>C</p>
+    </div>
+  </div>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  <div class="display_box">
+    <div class="box red">
+      <div class="box blue"></div>
+    </div>
+    <div class="box green"></div>
+  </div>
 </body>
 
 </html>
